docs: 信电物补充

--- a/docs/专业必修课程/信电物.md
+++ b/docs/专业必修课程/信电物.md
@@ -15,6 +15,13 @@
     - 上课会问问题，没人回答会直接讲（一般没人回答），不会点人回答
     - 学在浙大讨论区有讨论分
 
+=== "林时胜"
+    - 座位不固定，每节课课前签到，lss会看签到率和关注没签到的同学
+    - 每节课会随机找几个同学问题，优先找没签到的同学，问的问题比较哲学，听了课也不一定能回答上来，然后他会和同学交流，就勉强当成课堂讨论了
+    - 上课干货少水货多，比较空
+    - 学在浙大：看了看lss应该是直接抄的隔壁班的课程要求，结果没设置讨论区，课件也没给，只留作业，作业答案也没发，需要单独联系助教要答案
+    - 复习资料是我们找往年的或者和隔壁班同学要的（感恩！）
+
 ## 分数构成
 
 === "汪小知"
@@ -28,6 +35,11 @@
         - 能带图 8% （20分）
         - 计算与分析 20% （50分）
         - 设计题 12% （30分）
+
+=== "林时胜"
+
+    - 学在浙大讨论：7% ←因为没开讨论，这一项不知道最后怎么评
+    - 其他和wxz班基本一样。
 
 ## 妙妙小资料
 
