docs: 边缘计算，计组补充

--- a/docs/专业必修课程/计组.md
+++ b/docs/专业必修课程/计组.md
@@ -34,6 +34,7 @@
 ???+ tip "作业与报告"
     - [【信电ISEE】信电电科大三上课程资料整理【含电科（信电）github资源整合】（tag：集成电路原理与设计、计算机组成与设计、软件技术基础、信息电子学物理基础、射频电路与系统、天线理论与设计、毛概）](https://www.cc98.org/topic/6090209)
     - [Github@cyc-987：课件，project报告，CPU报告](https://github.com/cyc-987/ZJU-ISEE-Res/tree/main/%E8%AE%A1%E7%BB%84)
+    - [cyc-987/cache-simulator：Project2代码开源](https://github.com/cyc-987/cache-simulator)
     - [【信电ISEE】大三专业课（计组，光电子，DSP，集成电路）资料经验分享](https://www.cc98.org/topic/5705920)
 
 ???+ tip "复习与历年卷"
